# automation

./: emails.txt  phone_numbers.txt  potential-contacts.txt  pyproject.toml
assets/: existing-contacts.txt
automation/: automation.py
